WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296083
[macOS] Quicknote context menu items are missing images
https://bugs.webkit.org/show_bug.cgi?id=296083
Summary
[macOS] Quicknote context menu items are missing images
Lily Spiniolas
Reported
2025-07-16 13:52:07 PDT
rdar://155995068
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-07-16 13:56:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48145
EWS
Comment 2
2025-07-16 14:04:28 PDT
Committed
297489@main
(ddc5be5f8e25): <
https://commits.webkit.org/297489@main
> Reviewed commits have been landed. Closing PR #48145 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug