[macOS] Quicknote context menu items are missing images https://bugs.webkit.org/show_bug.cgi?id=296083 rdar://155995068

Reviewed by Abrar Rahman Protyasha.

Update the symbol type to private.

* Source/WebKit/Platform/mac/MenuUtilities.mm:
(WebKit::symbolNameWithTypeForAction):

Canonical link: https://commits.webkit.org/297489@main